Fix spacing between social media icons

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -102,6 +102,10 @@ footer {
 .icon {
   height: 38px; 
   width: 38px; 
+  margin-top: 15px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  margin-left: 20px; 
 }
 
 .second-section {
